istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: python-api
spec:
  hosts:
    - "*"
  gateways:
    - python-api-gateway

  http:
    - match:
        - uri:
            prefix: /api
      rewrite:
        uri: /
      route:
        - destination:
            host: python-api
            port:
              number: 80

    - match:
        - uri:
            prefix: /health
      route:
        - destination:
            host: python-api
            port:
              number: 80
